Set up label permissions for Gerrit review

--- a/project.config
+++ b/project.config
@@ -1,2 +1,43 @@
 [access]
 	inheritFrom = Public-Projects
+[submit]
+	action = cherry pick
+[label "Code-Review"]
+	abbreviation = R
+	value = -1 Don't submit as-is
+	value =  0 No score
+	value = +1 Looks good to me
+	defaultValue = 0
+	function = MaxWithBlock
+	copyMinScore = true
+	copyMaxScore = true
+	copyAllScoresOnTrivialRebase = true
+	copyAllScoresIfNoCodeChange = true
+[label "Commit-Queue"]
+	abbreviation = CQ
+	value =  0 Not ready
+	value = +1 Dry run
+	value = +2 Commit
+	defaultValue = 0
+	function = NoBlock
+[label "Verified"]
+[access "refs/*"]
+	exclusiveGroupPermissions = label-Verified
+	owner = group $OWNERS
+[access "refs/for/refs/heads/*"]
+	create = group $CONTRIBUTORS
+	push = group $CONTRIBUTORS
+	forgeAuthor = group $COMMITTERS
+[access "refs/heads/*"]
+	label-Commit-Queue = +0..+1 group $CONTRIBUTORS
+	label-Commit-Queue = +0..+2 group $COMMITTERS
+	label-Code-Review = -1..+1 group $COMMITTERS
+	submit = group $COMMITTERS
+        # Following line only applies while they are still using Rietveld
+	push = group $COMMITTERS
+        # Following lines only apply if they have a CQ and are still using Rietveld
+	push = group chrome-commit-bot
+	forgeAuthor = group chrome-commit-bot
+        # Following lines only appliy if they have a CQ and are only using Gerrit
+	submit = group chrome-commit-bot
+        labelAs-Commit-Queue = +0..+2 group chrome-commit-bot
