--- a/project.config
+++ b/project.config
@@ -39,5 +39,5 @@
 	push = group chrome-commit-bot
 	forgeAuthor = group chrome-commit-bot
         # Following lines only appliy if they have a CQ and are only using Gerrit
-	submit = group chrome-commit-bot
-        labelAs-Commit-Queue = +0..+2 group chrome-commit-bot
+	# submit = group chrome-commit-bot
+        # labelAs-Commit-Queue = +0..+2 group chrome-commit-bot
